# Python_ETL_Pipeline

./: .env  README.md  config.py  extract.py  load.py  main.py  pyproject.toml  requirements.txt  test_transform.py  transform.py
SQL/: orders.sql
data_input/: order_details.csv  restaurant_details.csv
data_output/: aggregated_data.csv  orders_cleaned.csv  orders_rejected.csv
data_output/date=2026-04-14/: aggregated.csv  clean.csv  rejected.csv
