[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-data-pipeline"
version = "0.1.4"
description = "Simple ETL pipeline for processing and aggregating order data"
authors = [
    { name = "Youssef Osman" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "requests>=2.31.0"
]

[tool.setuptools]
py-modules = ["main", "transform", "load", "extract", "config"]

[project.scripts]
run-pipeline = "main:run_pipeline"